--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,19 @@
 {
     "version": 2,
-    "functions": {
-      "api/index.js": {
-        "runtime": "@vercel/node"
+    "builds": [
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
       }
-    },
+    ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "api/index.js" }
+      {
+        "src": "/api/(.*)",
+        "dest": "server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      }
     ]
   }
-  
