--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000 --open",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -33,5 +33,8 @@
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
