--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,19 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "src/**/*",
+      "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" } 
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html" 
-    }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
