--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
+    "pdfkit": "^0.16.0",
+    "pdfkit-table": "^0.1.99",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
